TL-38 bookSerivce endpoints tested , contents endpoints created